tests/ui/event_flags_option_name.stderr
error[E0597]: `name` does not live long enough
  --> tests/ui/event_flags_option_name.rs:13:22
   |
11 |     let name = CString::new("name").unwrap();
   |         ---- binding `name` declared here
12 |     let mut opts = EventFlagsOptions::default();
13 |     opts.name = Some(&name);
   |                      ^^^^^ borrowed value does not live long enough
...
16 | }
   | -
   | |
   | `name` dropped here while still borrowed
   | borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `EventFlagsContext`
   |
   = note: values in a scope are dropped in the opposite order they are defined
